--- a/index.html
+++ b/index.html
@@ -4,21 +4,331 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assessment</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+
+<div class="topbar">
+    <div>
+        <a href="Free Delivery on orders over $100" id="link1">Free Delivery on orders over $100</a>
+    </div>
+
+    <div>
+        <a href="Free Delivery on orders over $100" id="link1">Free Delivery on orders over $100</a>
+    </div>
+
+    <div>
+        <a href="Free Delivery on orders over $100" id="link1">Free Delivery on orders over $100</a>
+    </div>
     
+    <div>
+        <a href="Free Delivery on orders over $100" id="link1">Free Delivery on orders over $100</a>
+    </div>
+
+    <div>
+        <a href="Free Delivery on orders over $100"  id="link1">Free Delivery on orders over $100</a>
+    </div>
+
+</div>
+
+
+<div class="menu">
+    <div>
+        <a href="Home "  id="link21">Home</a>
+    </div>
+
+    <div>
+        <a href="Shop"  id="link21">Shop</a>
+    </div>
+
+    <div>
+        <a href="Products" id="link21">Producst</a>
+    </div>
+
+    <div>
+        <a href="blog" id="link21">Blog</a>
+    </div>
+
+    <div>
+        <a href="page" id="link21">Page</a>
+    </div>
+
+    <div>
+        <p>Bemins</p>
+    </div>
+
+
+
+</div>
+
+
+<div class="be-stylish">
+
+<div>
+    <p id="bestylish">Be Stylish <br> Be Our Customer.</p>
+    <a href="shopnow" id="shopnow">Shop now</a>
+
+</div>
+
+<div>
+    <img src="./Cap.png" alt="cap">
+</div>
+
+
+</div>
+
+
+
+<div class="set-of-clothes-1">
+
+    <div>
+        <img src="./Images/bluetop.png" alt="top">
+    </div>
+
+
+
+    <div>
+
+        <div class="handbags-glasses">
+<div>
+    <img src="./Images/purse.png" alt="purse">
+</div>
+
+<div>
+    <img src="./glasses.png" alt="">
+</div>
+
+     </div>
+
+
+<div class="Modern-Design">
+    <div>
+        <p>Modern Design</p>
+        <p id="Childrens">Children's Flat Sandals</p>
+
+        <a href="ShopCollection" id="shopcollection">ShopCollection</a>
+    </div>
+
+
+    <div>
+        <img src="./Images/sandals.png" alt="sandals">
+    </div>
+</div>
+
+
+</div>
+
+
+</div>
+
+
+<div class="midnavbar">
+<div>
+    <a href="Latest products" id="link3">Latest Products</a>
+</div>
+
+<div>
+    <a href="best sellers"  id="link3">Best Sellers</a>
+</div>
+
+<div>
+    <a href="featuredproducts"  id="link3">Featured Products</a>
+</div>
+
+</div>
+
+
+
+<div class="latest">
+    <div>
+        <img src="./Images/hat.png" alt="hat">
+    </div>
+
+
+    <div>
+        <img src="./Images/model1.png" alt="model1">
+    </div>
+
+
+
+    <div>
+        <img src="./Images/sunglass.png" alt="sunglass">
+    </div>
+
+    <div>
+        <img src="./Images/model2.png" alt="">
+    </div>
+</div>
 
 
 
 
+<div class="Beanie">
+
+    <div id="Knit">
+    <div>
+        <p>KnitCuffed Beanie</p>
+
+        <p id="Beanie">Beanie</p>
+        <button>Shop now</button>
+    </div>
+
+
+
+    <div>
+        <img src="./Images/lady1.png" alt="lady1">
+
+    </div>
+
+    </div>
 
 
 
 
+    <div id="Knit">
+        <div>
+            <p>Wool Mockneck Sweater</p>
+            <p id="Beanie">Cyprie Sweater</p>
+            <button id="Shopnow">Shop now</button>
+        </div>
+
+
+        <div>
+            <img src="./Images/lady2.png" alt="lady2">
+        </div>
+    </div>
+</div>
+
+
+<div class="cottonpolyester">
+
+<div><img src="./Images/lady3.png" alt="lady3"></div>
+
+
+<div>
+    <p>Cotton/polyester</p>
+    <p>Variengated Ribbed <br>
+    Crewneck Long</p>
+    <a href="Shop collection">Shop Collection</a>
+</div>
+
+</div>
+
+
+<p>Autumn Collection</p>
+
+
+<div class="autumncollection">
+    <div>
+        <img src="./Images/blackbag.png" alt="bag">
+
+        <p>The-way Exposed Mini Bag</p>
+
+        <p>This is a mini nag with a hidden zip</p>
+
+        <button id="Shopnow">Shop now</button>
+    </div>
+
+    <div>
+
+    <img src="./Images/autumnshoes.png" alt="shoe">
+    <p>Woven Sneakers with mesh upper</p>
+    <button>Shop now</button>
+
+    </div>
+
+
+    <div>
+        <img src="./Images/autumnlady.png" alt="lady">
+        <p>Crop Vest Top In Pawley</p>
+        <p>Crafted of eco-friendly cotton-hemp denim</p>
+        <button id="Shopnow">Shop now</button>
+    </div>
+</div>
+
+
+
+<p>Follow us on instagram</p>
+<a href="@UX_Alishan">@UX_Alishan</a>
+
+
+<div class="anothercollection">
+    <div>
+        <img src="./Images/silverbag.png" alt="bag">
+    </div>
+
+    <div>
+        <img src="./Images/lady4.png" alt="lady">
+    </div>
+
+
+    <div>
+        <img src="./Images/headsock.png" alt="headsock">
+    </div>
+
+    <div>
+        <img src="./Images/ladyonwhite.png" alt="lady">
+    </div>
+
+    <div>
+        <img src="./Images/whiteboots.png" alt="boots">
+    </div>
+</div>
+
+
+<div class="footerdiv">
+    <div>
+        <p>Let's Get In Touch</p>
+        <p>Subscribe and be the first to know about exclusive <br>
+        offers, productrs, promotions & more</p>
+
+
+        <input type="email" placeholder="Enter your email..."> <button>Submit</button>
+ 
+        <p>Our Social</p>
+
+    </div>
+
+
+
+    <div>
+        <p>Shop</p>
+        <a href="Shop" id="link2">Shop dog</a> <br>
+        <a href="Shop" id="link2">Shop cat</a><br>
+        <a href="Shop" id="link2">Shop brands</a><br>
+        <a href="shop" id="link2">On sale</a><br>
+        <a href="Auto" id="link2">Auto-Delivery</a><br>
+        <a href="shop" id="link2">Aussie Hazard Cover</a><br>
+    </div>
+
+
+
+    <div>
+        <P>Customer Services</P><br>
+        <a href="track"id="link2"> Track Ordert</a><br>
+        <a href="return" id="link2">Returns</a><br>
+        <a href="Ship" id="link2">Shipping Info</a><br>
+        <a href="Recall" id="link2">Recalls & Advisories</a><br>
+        <a href="pet" id="link2">Pet Store Locator</a><br>
+        <a href="help"id="link2">Help</a><br>
+    </div>
+
+
+<div>
+    <p>Help</p>
+    <a href="faq" id="link2">FAQs</a><br>
+    <a href="ship"id="link2">Shipping</a><br>
+    <a href="retuens" id="link2">Returns</a><br>
+    <a href="size" id="link2">Size Guides</a><br>
+    <a href="materials" id="link2">Materials & Care</a><br>
+    <a href="contact" id="link2"> Contact Us</a><br>
+</div>
+
+</div>
 
 
 
 
-    
 </body>
 </html>
