--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 
 <div>
-    <img src="./Cap.png" alt="cap">
+    <img src="./Cap.png" alt="cap" id="image">
 </div>
 
 
@@ -83,7 +83,7 @@
 <div class="set-of-clothes-1">
 
     <div>
-        <img src="./Images/bluetop.png" alt="top">
+        <img src="./Images/bluetop.png" alt="top"  id="image">
     </div>
 
 
@@ -96,7 +96,7 @@
 </div>
 
 <div>
-    <img src="./glasses.png" alt="">
+    <img src="./glasses.png" alt=""  id="image">
 </div>
 
      </div>
@@ -112,7 +112,7 @@
 
 
     <div>
-        <img src="./Images/sandals.png" alt="sandals">
+        <img src="./Images/sandals.png" alt="sandals"  id="image">
     </div>
 </div>
 
@@ -142,22 +142,22 @@
 
 <div class="latest">
     <div>
-        <img src="./Images/hat.png" alt="hat">
+        <img src="./Images/hat.png" alt="hat"  id="image">
     </div>
 
 
     <div>
-        <img src="./Images/model1.png" alt="model1">
+        <img src="./Images/model1.png" alt="model1"  id="image">
     </div>
 
 
 
     <div>
-        <img src="./Images/sunglass.png" alt="sunglass">
+        <img src="./Images/sunglass.png" alt="sunglass"  id="image">
     </div>
 
     <div>
-        <img src="./Images/model2.png" alt="">
+        <img src="./Images/model2.png" alt=""  id="image">
     </div>
 </div>
 
@@ -177,7 +177,7 @@
 
 
     <div>
-        <img src="./Images/lady1.png" alt="lady1">
+        <img src="./Images/lady1.png" alt="lady1" id="image">
 
     </div>
 
@@ -195,7 +195,7 @@
 
 
         <div>
-            <img src="./Images/lady2.png" alt="lady2">
+            <img src="./Images/lady2.png" alt="lady2" id="image">
         </div>
     </div>
 </div>
@@ -203,7 +203,7 @@
 
 <div class="cottonpolyester">
 
-<div><img src="./Images/lady3.png" alt="lady3"></div>
+<div><img src="./Images/lady3.png" alt="lady3" id="image"></div>
 
 
 <div>
@@ -221,7 +221,7 @@
 
 <div class="autumncollection">
     <div>
-        <img src="./Images/blackbag.png" alt="bag">
+        <img src="./Images/blackbag.png" alt="bag" id="image">
 
         <p>The-way Exposed Mini Bag</p>
 
@@ -232,7 +232,7 @@
 
     <div>
 
-    <img src="./Images/autumnshoes.png" alt="shoe">
+    <img src="./Images/autumnshoes.png" alt="shoe" id="image">
     <p>Woven Sneakers with mesh upper</p>
     <button>Shop now</button>
 
@@ -240,7 +240,7 @@
 
 
     <div>
-        <img src="./Images/autumnlady.png" alt="lady">
+        <img src="./Images/autumnlady.png" alt="lady" id="image">
         <p>Crop Vest Top In Pawley</p>
         <p>Crafted of eco-friendly cotton-hemp denim</p>
         <button id="Shopnow">Shop now</button>
@@ -255,24 +255,24 @@
 
 <div class="anothercollection">
     <div>
-        <img src="./Images/silverbag.png" alt="bag">
+        <img src="./Images/silverbag.png" alt="bag" id="image">
     </div>
 
     <div>
-        <img src="./Images/lady4.png" alt="lady">
+        <img src="./Images/lady4.png" alt="lady" id="image">
     </div>
 
 
     <div>
-        <img src="./Images/headsock.png" alt="headsock">
+        <img src="./Images/headsock.png" alt="headsock" id="image">
     </div>
 
     <div>
-        <img src="./Images/ladyonwhite.png" alt="lady">
+        <img src="./Images/ladyonwhite.png" alt="lady" id="image">
     </div>
 
     <div>
-        <img src="./Images/whiteboots.png" alt="boots">
+        <img src="./Images/whiteboots.png" alt="boots" id="image">
     </div>
 </div>
 
