--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 
 <div>
-    <img src="./Cap.png" alt="cap" id="image">
+    <img src="./Images/Cap.png" alt="cap" id="image">
 </div>
 
 
