--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 </div>
 
 
-<p>Autumn Collection</p>
+<p id="Autumn">Autumn Collection</p>
 
 
 <div class="autumncollection">
@@ -249,8 +249,8 @@
 
 
 
-<p>Follow us on instagram</p>
-<a href="@UX_Alishan">@UX_Alishan</a>
+<p id="Autumn">Follow us on instagram</p>
+<a href="@UX_Alishan" id="autumnlink">@UX_Alishan</a>
 
 
 <div class="anothercollection">
