--- a/index.html
+++ b/index.html
@@ -55,24 +55,31 @@
     </div>
 
     <div>
-        <p>Bemins</p>
+        <p id="Bemins">Bemins</p>
     </div>
 
-
-
+    <!-- <div id="navicons">
+        <div><a href="icon"><img src="./Images/searchicon.png" alt="searchicon"></a></div>
+        <div><a href=""></a><img src="./Images/person.png" alt=""></a></div>
+    </div> -->
 </div>
 
+
+<div id="navicons">
+    <div><a href="icon"><img src="./Images/searchicon.png" alt="searchicon"></a></div>
+    <div><a href=""></a><img src="./Images/person.png" alt=""></a></div>
+</div>
 
 <div class="be-stylish">
 
 <div>
     <p id="bestylish">Be Stylish <br> Be Our Customer.</p>
-    <a href="shopnow" id="shopnow">Shop now</a>
+    <a href="shopnow" id="shopnow1">Shop now</a>
 
 </div>
 
 <div>
-    <img src="./Images/Cap.png" alt="cap" id="image">
+    <img src="./Images/Cap.png" alt="cap" id="cap">
 </div>
 
 
@@ -96,7 +103,7 @@
 </div>
 
 <div>
-    <img src="./glasses.png" alt=""  id="image">
+    <img src="./Images/sunglass.png" alt=""  id="image">
 </div>
 
      </div>
